<?xml version="1.0"?>
<package format="2">
  <name>template</name>
  <version>0.0.1</version>
  <description>template</description>

  <author email="xiangyu002@e.ntu.edu.sg">Mike Xiangyu Liu</author>

  <maintainer email="xiangyu002@e.ntu.edu.sg">Mike Xiangyu Liu</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>voxblox_ros</depend>
</package>
